# smartflowsolana

./: README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
app/create/: page.tsx
app/dashboard/: page.tsx
app/pay/[id]/: page.tsx
app/transactions/: page.tsx
app/tx/[hash]/: page.tsx
components/: Button.tsx  Card.tsx  Logo.tsx  Providers.tsx  WalletConnectButton.tsx
lib/: events.ts  solana.ts  store.ts  tokens.ts  utils.ts
lib/invoice/: client.ts
smartflow-pay-solana/: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
smartflow-pay-solana/docs/: ARCHITECTURE.md
smartflow-pay-solana/programs/smartflow_pay/: Cargo.toml
smartflow-pay-solana/programs/smartflow_pay/src/: errors.rs  events.rs  lib.rs  state.rs
smartflow-pay-solana/programs/smartflow_pay/src/instructions/: cancel_invoice.rs  create_invoice.rs  initialize_config.rs  mark_expired.rs  mod.rs  pay_invoice.rs
smartflow-pay-solana/tests/: smartflow_pay.ts
