[package]
name = "smartflow-pay"
version = "0.1.0"
description = "SmartFlow Pay — Solana Edition: Minimal audit-ready invoice protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "smartflow_pay"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token"] }
